2006-03-17  Per Bothner  <per@bothner.com>

	* QNameUtils.java (resolvePrefix): New method.
	(resolveQName): Make use of resolvePrefix.

	* Compare.java (apply): Fix comparison of QNames (SName).

2006-03-15  Per Bothner  <per@bothner.com>

	* CastAs.java: New class, extends gnu.kawa.functions.Convert.
	* CastableAs.java: New class, extends gnu.kawa.reflect.InstanceOf.
	* Makefile.am: Update accordingly.

	* TimeUtils.java: New class with static methods implementing
	date/time/duration-related functions.
	* Makefile.am: Update accordingly.

	* StringValue.java: Remove file.  Contents partly moved to new file
	StringUtils.java and partly moved to gnu/kawa/xml/StringValue.java.
	(stringToCodepoints$X, appendCodepoint, codepointsToString): New.
	* Makefile.am: Update accordingly.

	* NodeUtils.java (atomicValue): Moved to gnu.kawa.xml.KNode.
	(prefixesFromNodetype, inScopePrefixes$X): New methods.

	* BooleanValue (booleanValue): Fix thinko.
	Add correct handling for String and UntypedAtomic.

	* RelativeStep.java (inline): Don't optimize unless mustCompile.
	Also rename Compilation local from 'parser' to 'comp'.

	* Compare.java (apply): Fixes to handle dates/times/durations, and
	UntypedAtomic. Other fixes to follow specification more closely.
	* OrderedTuples.java (cmp): Try numeric compare first.

	* MinMax.java (cmobine): Use new NumverValue.numberCast method.

	* IntegerRange.java (apply): DTRT when range end is empty sequence.

	* Average.java: Use XQuery-specific ArithOp.add rather than AddOp.$pl.
	Fix handling of empty and singleton sequences.
	Use ArithOp.div for division.
	(combine): Inline into caller.

	* NumberValue.java (abs, floor, ceiling, roundHalfToEven): New methods.
	(numberCast): New static helper method.
	(numberValue): Use new classes/methods to better follow specification.
	(apply1): Return NaN on failure, as per specification.

2006-03-15  Per Bothner  <per@bothner.com>

	* ArithOp.java: New class, extends Procedure1or2.