@@ -1,3 +1,8 @@
+2006-03-20  Per Bothner  <per@bothner.com>
+
+	* BooleanValue.java (booleanValue): Handle Number that are not Numeric
+	so we DTRT for xs:double and xs:float.
+
 2006-03-17  Per Bothner  <per@bothner.com>
 
 	* QNameUtils.java (resolvePrefix): New method.
